fix download pop-up not showing bug

--- a/style.css
+++ b/style.css
@@ -30,10 +30,6 @@ a {
     -moz-transform: translate(-50%, -50%);
     -o-transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
-    
-    font-size: 20px;
-    padding: 5px;
-    z-index: 100;
 }
 
 img.center {
